[package]
name = "wsbrd_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wsbrd_cli"
path = "wsbrd_cli.rs"

[dependencies]
dbus = "0.9.1"
# In older rust editions, clap 2.28 fail to build with:
#   error[E0658]: `if` is not allowed in a `const fn`
# The problem may be difficult to identify/solve for average user, so we prefer
# to limit the version here.
clap = "2.0, < 2.28"
